--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,13 +4,82 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to c
 Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
 -->
 <html>
-    <head>
-        <title>TODO supply a title</title>
+    <head> 
+        <title>TechShop</title> 
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--hermano-->
     </head>
     <body>
-        <div>TODO write content</div>
-        <div>Clase #1 Aprendiendo HTML3</div>
+        <header>
+            <nav>
+                <a href="index.html"><h1>TechShop</h1></a>
+            </nav>
+            <hr><!-- brinco en la página -->
+        </header>
+        <aside>
+            <h1>Home</h1>
+            <h2>El producto más vendido</h2>
+            <p>Según los datos del mes pasado el producto x203 fue el que registró más ventas el mes anterior</p>
+        </aside>
+        <section>
+            <h2>Nuestros Productos</h2>
+            <article>
+                <h2>X2126</h2>
+                <figure>
+                    <img src="https://www.dbtechnologies.com/images/299/7134/180x180/cover/q-100/align-4/VIO-X206-front-no-grille.png" height="150" alt="Servidor"/>
+                    <figcaption>Servidor de alto perfil <a href="index.html">Comprar</a></figcaption>
+                </figure>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit suscipit parturient sodales turpis aptent varius, commodo magnis ac praesent nullam dictumst quis volutpat ridiculus congue lacus hac. A praesent mi maecenas volutpat hendrerit nisl suscipit dapibus sapien pretium gravida mattis, sem aliquam interdum scelerisque eleifend ridiculus viverra proin duis non. Eleifend aliquet metus urna class mollis volutpat placerat gravida in laoreet torquent dapibus, blandit netus pellentesque sapien egestas potenti risus diam euismod cras.</p>
+            </article>
+            <hr><!-- brinco en la página -->
+             <h2>Nuestros Productos</h2>
+            <article>
+                <h2>Vivo X</h2>
+                <figure>
+                    <img src="https://ae01.alicdn.com/kf/Sc517d6d00cd742e884a67602df8bdd3eh.jpg_640x640Q90.jpg_.webp" height="150" alt="Celular"/>
+                    <figcaption>Celular Nuevo <a href="#">Comprar</a></figcaption>
+                </figure>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit suscipit parturient sodales turpis aptent varius, commodo magnis ac praesent nullam dictumst quis volutpat ridiculus congue lacus hac. A praesent mi maecenas volutpat hendrerit nisl suscipit dapibus sapien pretium gravida mattis, sem aliquam interdum scelerisque eleifend ridiculus viverra proin duis non. Eleifend aliquet metus urna class mollis volutpat placerat gravida in laoreet torquent dapibus, blandit netus pellentesque sapien egestas potenti risus diam euismod cras.</p>
+            </article>
+            
+             <article>
+                 <table border="0">
+                     <thead>
+                         <tr>
+                             <th>Indice</th>
+                             <th>Código</th>
+                             <th>Descripción</th>
+                             <th>Precio</th>
+                         </tr>
+                     </thead>
+                     <tbody>
+                         <tr>
+                             <td>1</td>
+                             <td>X206</td>
+                             <td>Servidor de gama media</td>
+                             <td>$2500</td>
+                         </tr>
+                         <tr>
+                             <td>2</td>
+                             <td>X306</td>
+                             <td>Servidor de gama alta</td>
+                             <td>$3500</td>
+                         </tr>
+                         <tr>
+                             <td>3</td>
+                             <td>X303</td>
+                             <td>Servidor de gama flexible</td>
+                             <td>$2000</td>
+                         </tr>
+                         <tr>
+                             <td>4</td>
+                             <td></td>
+                             <td></td>
+                             <td>$5000</td>
+                         </tr>
+                     </tbody>
+                 </table>
+             </article>             
+        </section>
     </body>
 </html>
